# Decaf-Compiler

./: .gitignore  CMakeLists.txt  ClassDefs.h  Classes.cpp  LICENCE  Makefile  README.md  bison_parser.y  decaf.l  decaf.output  decaf.tab.c  decaf.y  flex_output.txt  lex_specifications.l  parser.y  run.sh  sample_1  sample_2  sample_3  sample_input.txt  sample_output.txt  specifications_lex.l
build_docs/: decafCompilerDoxyFile
code/: .llout.swp  ClassDefs.h  Classes.cpp  Makefile  XML_Vistor.txt  decaf.l  decaf.output  decaf.tab.c  decaf.tab.h  decaf.y  lex.yy.c  llout  run.sh
docs/: CNAME  README.md  index.md
docs/html/: annotated.html  annotated_dup.js  assignment_8cpp_source.html  assignment_8h_source.html  astNode_8h_source.html  binaryExpression_8cpp_source.html  binaryExpression_8h_source.html  block_8cpp_source.html  block_8h_source.html  boolLiteral_8cpp_source.html  boolLiteral_8h_source.html  breakStatement_8cpp_source.html  breakStatement_8h_source.html  calloutArgument_8cpp_source.html  calloutArgument_8h_source.html  calloutArguments_8cpp_source.html  calloutArguments_8h_source.html  calloutCall_8cpp_source.html  calloutCall_8h_source.html  charLiteral_8cpp_source.html  charLiteral_8h_source.html  classAssignment-members.html  classAssignment.html  classAssignment.js  classAssignment__coll__graph.map  classAssignment__coll__graph.md5  classAssignment__inherit__graph.md5  classBlock-members.html  classBlock.html  classBlock.js  classBlock__coll__graph.md5  classBlock__inherit__graph.map  classBlock__inherit__graph.md5  classConstructs-members.html  classConstructs.html  classConstructs.js  classExpression-members.html  classExpression.html  classExpression.js  classExpression__coll__graph.map  (+314 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_2.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_c.js  classes_d.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  functions_d.js  functions_e.js  pages_0.js  (+6 more)
sample_inputs/: input_break  input_complex  input_forloop  input_gcd  input_global
src/: .Makefile.swo  ClassDefs.h  Classes.cpp  Makefile  a.out  assignment.cpp  assignment.h  astNode.h  binExpr.cpp  binExpr.h  binaryExpression.cpp  block.cpp  block.h  boolLiteral.cpp  boolLiteral.h  breakStatement.cpp  breakStmt.cpp  breakStmt.h  calloutArg.cpp  calloutArg.h  calloutArgs.cpp  calloutArgs.h  calloutArgument.cpp  calloutArguments.cpp  calloutCall.cpp  calloutCall.h  charLiteral.cpp  charLiteral.h  common.h  constructs.cpp  continueStatement.cpp  continueStmt.cpp  continueStmt.h  decaf.l  decaf.y  decaf.ypp  decaf_lexer.l  decaf_parser.ypp  enclExpr.cpp  enclExpr.h  (+74 more)
src/class_definitions/: assignment.h  astNode.h  binaryExpression.h  block.h  boolLiteral.h  breakStatement.h  calloutArgument.h  calloutArguments.h  calloutCall.h  charLiteral.h  constructs.h  continueStatement.h  enclosedExpression.h  expression.h  fieldDeclaration.h  fieldDeclarations.h  forStatement.h  functionCall.h  globals.h  ifElseStatements.h  integerLiteral.h  literal.h  location.h  method.h  methodArgument.h  methodArguments.h  methodCall.h  methodDeclaration.h  methodDeclarations.h  parameters.h  program.h  returnStatement.h  statement.h  statements.h  stringList.h  stringLiteral.h  unaryExpression.h  variable.h  variableDeclaration.h  variableDeclarations.h  (+1 more)
test_inputs/: input_backtracking.dcf  input_break.dcf  input_complex.dcf  input_gcd.dcf  input_global.dcf  input_recursion.dcf  run_tests.sh
test_inputs/outputs/: input_backtracking.dcf_output  input_complex.dcf_output  input_gcd.dcf_output  input_global.dcf_output  input_recursion.dcf_output
tests/: input_array  input_complex  input_gcd  input_normal  input_returntype
